hphp/test/zend/good/ext/standard/tests/file/005_variation.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip Do not run on Windows');
}
if (getenv("SKIP_SLOW_TESTS")) {
    die("skip slow test");
}
?>