hphp/test/zend/bad/ext/zlib/tests/gzencode_variation1.php.skipif
<?php 

if( substr(PHP_OS, 0, 3) == "WIN" ) {
   die("skip.. Do not run on Windows");
}

if (!extension_loaded("zlib")) {
	print "skip - ZLIB extension not loaded"; 
}	 
?> 